--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,15 +6,15 @@ pipeline {
     }
 
     environment {
-        DOCKER_HUB_USER = 'mayrhatte09'   
-        IMAGE_NAME = 'myimage'
+        DOCKER_HUB_USER = 'smicx20'   
+        IMAGE_NAME = 'myweb-image'
     }
 
     stages {
         stage('Git Checkout') {
             steps {
                 // Checkout code from Git repository 
-                git url: 'https://github.com/Mayurhatte09/myweb.git', branch: 'maain'
+                git url: 'https://github.com/sm-simplifies/myweb.git', branch: 'master'
             }
         }
 
